2001-12-18  Jim Blandy  <jimb@redhat.com>

	* Makefile.in (c-exp.tab.o): Delete duplicate build rule.  Fix
 	dependency list on remaining build rule.

2001-12-18  Martin M. Hunt  <hunt@redhat.com>

	* ser-tcp.c (tcp_open): Disable Nagle algorithm which
	improves performance in some cases.

2001-12-17  Ben Harris  <bjh21@netbsd.org>

	* armbsd-nat.c: Remove file, renamed to armnbsd-nat.c.
	* armnbsd-nat.c: New file, renamed from armbsd-nat.c.
	* Makefile.in: Rename armbsd-nat.c to armnbsd-nat.c.
	* config/arm/nbsd.mh: Likewise.

2001-12-17  Corinna Vinschen  <vinschen@redhat.com>

	* NEWS: Note new target XStormy16.
	* MAINTAINERS: Add -Werror to XStormy16.

2001-12-17  Fernando Nasser  <fnasser@redhat.com>

	From Richard Earnshaw <rearnsha@arm.com>:
	* arm-tdep.c (arm_software_single_step): New function. Implements
	software single-stepping for ARM targets.
	(arm_get_next_pc, thumb_get_next_pc, bitcount, shifted_reg_val): Only
	needed for software single-stepping.
	* config/arm/tm-arm.h: Activate SOFTWARE_SINGLE_STEP_P.

2001-12-17  Fernando Nasser  <fnasser@redhat.com>

	From Richard Earnshaw <rearnsha@arm.com>:
	* config/arm/nbsd.mh, config/arm/nbsd.mt, config/arm/tm-nbsd.h,
	config/arm/nm-nbsd.h, config/arm/xm-nbsd.h: New files.
	* armbsd-nat.c: New file.
	* Makefile.in: Build it.
	* configure.host, configure.tgt: Support NetBSD/arm.

2001-12-17  Corinna Vinschen  <vinschen@redhat.com>

	* MAINTAINERS: Add myself as XStormy16 maintainer.

2001-12-15  Kevin Buettner  <kevinb@redhat.com>

	* config/rs6000/tm-rs6000.h (solib.h): Conditionally include.

2001-12-15  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.c: Re-generate.
	
2001-12-15  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Remove powerpcle-eabi and rs6000-ibm-aix3.2 from
	target list.

2001-12-15  Andrew Cagney  <ac131313@redhat.com>

	* defs.h (LITTLE_ENDIAN): Delete definition.
	* arch-utils.c, cris-tdep.c, d10v-tdep.c, defs.h, gdbarch.c,